# app/app/api/app_http.pb.go
@@ -40,6 +40,7 @@ const OperationAppAdminCreateGoods = "/api.App/AdminCreateGoods"
 const OperationAppAdminCreateGoodsThree = "/api.App/AdminCreateGoodsThree"
 const OperationAppAdminCreateGoodsTwo = "/api.App/AdminCreateGoodsTwo"
 const OperationAppAdminDailyAreaReward = "/api.App/AdminDailyAreaReward"
+const OperationAppAdminDailyAreaRewardNew = "/api.App/AdminDailyAreaRewardNew"
 const OperationAppAdminDailyBalanceReward = "/api.App/AdminDailyBalanceReward"
 const OperationAppAdminDailyFee = "/api.App/AdminDailyFee"
 const OperationAppAdminDailyLocationReward = "/api.App/AdminDailyLocationReward"
@@ -75,6 +76,7 @@ const OperationAppAdminUpdateLocationNewMax = "/api.App/AdminUpdateLocationNewMa
 const OperationAppAdminUserList = "/api.App/AdminUserList"
 const OperationAppAdminUserPasswordUpdate = "/api.App/AdminUserPasswordUpdate"
 const OperationAppAdminUserRecommend = "/api.App/AdminUserRecommend"
+const OperationAppAdminVipNewUpdate = "/api.App/AdminVipNewUpdate"
 const OperationAppAdminVipUpdate = "/api.App/AdminVipUpdate"
 const OperationAppAdminWithdraw = "/api.App/AdminWithdraw"
 const OperationAppAdminWithdrawBiw = "/api.App/AdminWithdrawBiw"
@@ -135,6 +137,7 @@ type AppHTTPServer interface {
 	AdminCreateGoodsThree(context.Context, *AdminCreateGoodsRequest) (*AdminCreateGoodsReply, error)
 	AdminCreateGoodsTwo(context.Context, *AdminCreateGoodsRequest) (*AdminCreateGoodsReply, error)
 	AdminDailyAreaReward(context.Context, *AdminDailyLocationRewardRequest) (*AdminDailyLocationRewardReply, error)
+	AdminDailyAreaRewardNew(context.Context, *AdminDailyLocationRewardRequest) (*AdminDailyLocationRewardReply, error)
 	AdminDailyBalanceReward(context.Context, *AdminDailyBalanceRewardRequest) (*AdminDailyBalanceRewardReply, error)
 	AdminDailyFee(context.Context, *AdminDailyFeeRequest) (*AdminDailyFeeReply, error)
 	AdminDailyLocationReward(context.Context, *AdminDailyLocationRewardRequest) (*AdminDailyLocationRewardReply, error)
@@ -170,6 +173,7 @@ type AppHTTPServer interface {
 	AdminUserList(context.Context, *AdminUserListRequest) (*AdminUserListReply, error)
 	AdminUserPasswordUpdate(context.Context, *AdminPasswordUpdateRequest) (*AdminPasswordUpdateReply, error)
 	AdminUserRecommend(context.Context, *AdminUserRecommendRequest) (*AdminUserRecommendReply, error)
+	AdminVipNewUpdate(context.Context, *AdminVipUpdateRequest) (*AdminVipUpdateReply, error)
 	AdminVipUpdate(context.Context, *AdminVipUpdateRequest) (*AdminVipUpdateReply, error)
 	AdminWithdraw(context.Context, *AdminWithdrawRequest) (*AdminWithdrawReply, error)
 	AdminWithdrawBiw(context.Context, *AdminWithdrawEthRequest) (*AdminWithdrawEthReply, error)
@@ -259,6 +263,7 @@ func RegisterAppHTTPServer(s *http.Server, srv AppHTTPServer) {
 	r.POST("/api/admin_dhb/password_update", _App_AdminUserPasswordUpdate0_HTTP_Handler(srv))
 	r.POST("/api/admin_dhb/admin_update_location_new_max", _App_AdminUpdateLocationNewMax0_HTTP_Handler(srv))
 	r.POST("/api/admin_dhb/vip_update", _App_AdminVipUpdate0_HTTP_Handler(srv))
+	r.POST("/api/admin_dhb/vip_update_new", _App_AdminVipNewUpdate0_HTTP_Handler(srv))
 	r.POST("/api/admin_dhb/set_pass", _App_AdminSetPass0_HTTP_Handler(srv))
 	r.POST("/api/admin_dhb/amount_four_update", _App_AdminAmountFourUpdate0_HTTP_Handler(srv))
 	r.POST("/api/admin_dhb/undo_update", _App_AdminUndoUpdate0_HTTP_Handler(srv))
@@ -280,6 +285,7 @@ func RegisterAppHTTPServer(s *http.Server, srv AppHTTPServer) {
 	r.GET("/api/admin_dhb/new_daily_location_reward", _App_AdminDailyLocationReward0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/new_daily_location_reward_three", _App_AdminDailyLocationRewardThree0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/daily_area_reward", _App_AdminDailyAreaReward0_HTTP_Handler(srv))
+	r.GET("/api/admin_dhb/daily_area_reward_new", _App_AdminDailyAreaRewardNew0_HTTP_Handler(srv))
 	r.GET("/api/admin_dhb/daily_location_reward_new", _App_AdminDailyLocationRewardNew0_HTTP_Handler(srv))
 	r.POST("/api/admin_dhb/add_money", _App_AdminAddMoney0_HTTP_Handler(srv))
 	r.POST("/api/admin_dhb/add_money_two", _App_AdminAddMoneyTwo0_HTTP_Handler(srv))
@@ -1236,6 +1242,28 @@ func _App_AdminVipUpdate0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context)
 	}
 }
 
+func _App_AdminVipNewUpdate0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminVipUpdateRequest
+		if err := ctx.Bind(&in.SendBody); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAppAdminVipNewUpdate)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminVipNewUpdate(ctx, req.(*AdminVipUpdateRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminVipUpdateReply)
+		return ctx.Result(200, reply)
+	}
+}
+
 func _App_AdminSetPass0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in AdminSetPassRequest
@@ -1658,6 +1686,25 @@ func _App_AdminDailyAreaReward0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Co
 		http.SetOperation(ctx, OperationAppAdminDailyAreaReward)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.AdminDailyAreaReward(ctx, req.(*AdminDailyLocationRewardRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminDailyLocationRewardReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _App_AdminDailyAreaRewardNew0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminDailyLocationRewardRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAppAdminDailyAreaRewardNew)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminDailyAreaRewardNew(ctx, req.(*AdminDailyLocationRewardRequest))
 		})
 		out, err := h(ctx, &in)
 		if err != nil {
@@ -2185,6 +2232,7 @@ type AppHTTPClient interface {
 	AdminCreateGoodsThree(ctx context.Context, req *AdminCreateGoodsRequest, opts ...http.CallOption) (rsp *AdminCreateGoodsReply, err error)
 	AdminCreateGoodsTwo(ctx context.Context, req *AdminCreateGoodsRequest, opts ...http.CallOption) (rsp *AdminCreateGoodsReply, err error)
 	AdminDailyAreaReward(ctx context.Context, req *AdminDailyLocationRewardRequest, opts ...http.CallOption) (rsp *AdminDailyLocationRewardReply, err error)
+	AdminDailyAreaRewardNew(ctx context.Context, req *AdminDailyLocationRewardRequest, opts ...http.CallOption) (rsp *AdminDailyLocationRewardReply, err error)
 	AdminDailyBalanceReward(ctx context.Context, req *AdminDailyBalanceRewardRequest, opts ...http.CallOption) (rsp *AdminDailyBalanceRewardReply, err error)
 	AdminDailyFee(ctx context.Context, req *AdminDailyFeeRequest, opts ...http.CallOption) (rsp *AdminDailyFeeReply, err error)
 	AdminDailyLocationReward(ctx context.Context, req *AdminDailyLocationRewardRequest, opts ...http.CallOption) (rsp *AdminDailyLocationRewardReply, err error)
@@ -2220,6 +2268,7 @@ type AppHTTPClient interface {
 	AdminUserList(ctx context.Context, req *AdminUserListRequest, opts ...http.CallOption) (rsp *AdminUserListReply, err error)
 	AdminUserPasswordUpdate(ctx context.Context, req *AdminPasswordUpdateRequest, opts ...http.CallOption) (rsp *AdminPasswordUpdateReply, err error)
 	AdminUserRecommend(ctx context.Context, req *AdminUserRecommendRequest, opts ...http.CallOption) (rsp *AdminUserRecommendReply, err error)
+	AdminVipNewUpdate(ctx context.Context, req *AdminVipUpdateRequest, opts ...http.CallOption) (rsp *AdminVipUpdateReply, err error)
 	AdminVipUpdate(ctx context.Context, req *AdminVipUpdateRequest, opts ...http.CallOption) (rsp *AdminVipUpdateReply, err error)
 	AdminWithdraw(ctx context.Context, req *AdminWithdrawRequest, opts ...http.CallOption) (rsp *AdminWithdrawReply, err error)
 	AdminWithdrawBiw(ctx context.Context, req *AdminWithdrawEthRequest, opts ...http.CallOption) (rsp *AdminWithdrawEthReply, err error)
@@ -2532,6 +2581,19 @@ func (c *AppHTTPClientImpl) AdminDailyAreaReward(ctx context.Context, in *AdminD
 	pattern := "/api/admin_dhb/daily_area_reward"
 	path := binding.EncodeURL(pattern, in, true)
 	opts = append(opts, http.Operation(OperationAppAdminDailyAreaReward))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *AppHTTPClientImpl) AdminDailyAreaRewardNew(ctx context.Context, in *AdminDailyLocationRewardRequest, opts ...http.CallOption) (*AdminDailyLocationRewardReply, error) {
+	var out AdminDailyLocationRewardReply
+	pattern := "/api/admin_dhb/daily_area_reward_new"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAppAdminDailyAreaRewardNew))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
@@ -2989,6 +3051,19 @@ func (c *AppHTTPClientImpl) AdminUserRecommend(ctx context.Context, in *AdminUse
 	opts = append(opts, http.Operation(OperationAppAdminUserRecommend))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *AppHTTPClientImpl) AdminVipNewUpdate(ctx context.Context, in *AdminVipUpdateRequest, opts ...http.CallOption) (*AdminVipUpdateReply, error) {
+	var out AdminVipUpdateReply
+	pattern := "/api/admin_dhb/vip_update_new"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAppAdminVipNewUpdate))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in.SendBody, &out, opts...)
 	if err != nil {
 		return nil, err
 	}
