# openapi.yaml
@@ -620,6 +620,29 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/admin_dhb/daily_area_reward_new:
+        get:
+            tags:
+                - App
+            operationId: App_AdminDailyAreaRewardNew
+            parameters:
+                - name: date
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminDailyLocationRewardReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/daily_balance_reward:
         get:
             tags:
@@ -1811,6 +1834,30 @@ paths:
             tags:
                 - App
             operationId: App_AdminVipUpdate
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/AdminVipUpdateRequest_SendBody'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminVipUpdateReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/admin_dhb/vip_update_new:
+        post:
+            tags:
+                - App
+            operationId: App_AdminVipNewUpdate
             requestBody:
                 content:
                     application/json:
